# hamcrest-rust

./: Cargo.toml
src/: assert.rs  description.rs  lib.rs  matcher.rs
src/matcher/: core.rs  ord.rs  text.rs
src/matcher/core/: all_of.rs  any_of.rs  described_as.rs  every.rs  has_items.rs  is.rs  is_equal.rs  is_not.rs  matches.rs  substring.rs
src/matcher/text/: blank.rs  length.rs
tests/: all_of.rs  any_of.rs  described_as.rs  every_item.rs  has_items.rs  is_equal.rs  matches.rs  ord.rs  substring.rs  text.rs
