[package]
name = "hamcrest"
version = "0.1.0"
edition = "2021"
authors = [
    "Mauro Franceschini <mauro.franceschini@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.regex]
version = "1.9.5"
optional = true

[features]
regex = ["dep:regex"]
all = ["regex"]
